# DAT_Player

./: .gitignore  CMakeLists.txt  README.md
docs/: DEVELOPMENT_SETUP.md  spotter_file_access_notes.md  spotter_tamper_verification_audit.md  spotter_time_metadata_analysis.md
include/dat_player/: DatFrameIndexer.h  RecordingMetadata.h
packaging/: README.txt
src/: DatFrameIndexer.cpp  RecordingMetadata.cpp
src/Sef2SignatureVerifier/: Program.cs  Sef2SignatureVerifier.csproj
src/playback/: DecodeSmokeTest.cpp  DecodeTest.cpp  H264Decoder.cpp  H264Decoder.h  VideoFrame.h
src/player/: DatPlayer.rc  main.cpp  resource.h
src/resources/: Sef2SigningPublicKey.xml
tests/: DatFrameIndexerTests.cpp
tests/fixtures/sef2/: missing_signature_camera_205.sef2  modified_start_camera_205.sef2  valid_camera_205.sef2
tools/: analyze_dat_timestamps.py  analyze_sef2_metadata.py  package_release.ps1  parity_indexer_test.py
